assets/css/style.css
.titleSpan {
    color: black;
    text-align: center;
    font-size: 800%;
    margin: 0;
    padding: 2% auto 0 auto;
}

.titleSpan:hover {
    color: rgb(145, 253, 21);
    text-decoration: none;
}

.titleHover {
    text-decoration: none;
}

a:hover {
text-decoration: none;
}

/* .meSpacerHeight {
    opacity: 0;
    width: 10px;
    
} */
.meCartoon {
    display: block;
    margin: 0 auto;
    
}
.aboutTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}



.appleii {
    display: block;
    margin: 30% auto 0 auto;
    width: 80%;
    
}

.codeTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}

.saw {
    display: block;
    margin: 0 auto 0 auto;
    width: 80%;
    
}

.sawTextHover {
    text-align: center;
    color: rgb(145, 253, 21);
}


/* CODING PORTFOLIO PAGE */


.codeSiteCards {
    display: block;
    margin: 7% auto;
    width: 80%
}


/* ABOUT ME PAGE */


.mePic {
    display: block;
    margin: 7% auto;
    width: 80%
}

.mePicHover {
    text-align: center;
    color: rgb(145, 253, 21);
}

.aboutText {
    padding: 40% 0   
}

.aboutText:hover {
    color: rgb(145, 253, 21);

}

